--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "main"
+      - "**"
 
 jobs:
   build:
@@ -14,8 +14,8 @@ jobs:
         config:
         - name: Windows
           os: windows-latest
-          
-        - name: MacOS
+
+        - name: macOS
           os: macos-latest
 
         - name: Android32
@@ -30,20 +30,21 @@ jobs:
           os: macos-latest
           target: iOS
 
+
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
 
     steps:
-      - uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.ZBOT_GITHUB_PAT }}
-          submodules: 'recursive'
+      - uses: actions/checkout@v4
 
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
+          bindings: geode-sdk/bindings
+          bindings-ref: main
           combine: true
-      
+          target: ${{ matrix.config.target }}
+
   package:
     name: Package builds
     runs-on: ubuntu-latest
@@ -53,7 +54,28 @@ jobs:
       - uses: geode-sdk/build-geode-mod/combine@main
         id: build
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
-          name: Build Output
+          name: build-output
           path: ${{ steps.build.outputs.build-output }}
+
+  nightly:
+    name: Update nightly release
+    runs-on: ubuntu-latest
+    needs: ['package']
+    
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          path: './artifacts/'
+
+      - uses: andelf/nightly-release@main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: nightly
+          name: 'Development Release'
+          body: |
+            Development release for commit ${{ github.sha }}. 
+          files: |
+            ./artifacts/build-output/*.geode
